--- a/youtube.html
+++ b/youtube.html
@@ -139,8 +139,9 @@
        <div class="im">
             <img  class="profile"src="channel\channel-4.jpeg">  
        </div> 
-       <a href="https://youtu.be/094y1Z2wpJg?si=8TAoweqloCDcRneF" target="_blank">
-       <div class="txt"><p class="text">Simplest Math Problem No one can solve-Collatz conjecture</p></a>
+       <div class="txt">
+            <a href="https://youtu.be/094y1Z2wpJg?si=8TAoweqloCDcRneF" target="_blank">
+           <p class="text">Simplest Math Problem No one can solve-Collatz conjecture</p></a>
            <p class="name">Veritasium</p>
            <p class="year">18M views 	&#183; 4 months ago </p>
        </div>
